[package]
name = "weii_joins_rust"
version = "0.0.1"
edition = "2024"

[lib]
name = "main"
path = "src/main.rs"

[dependencies]
chrono = "0.4.44"
configparser = "3.1.0"
env_logger = "0.11.10"
futures-util = "0.3.32"
log = "0.4.29"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1",  features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-native-roots"] }
